test/fail/stdop-arity.rnp
1.floor(1);
---
TypeError: Expected 0 arguments
 --> fail/stdop-arity.rnp:1:1
  |
1 | 1.floor(1);
  | ^^^^^^^^^^ Expected 0 arguments
  |
